# Theta-Xi-chore-scheduler

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: detail.cpp  detail.h  file.cpp  file.h  func.cpp  func.h  main.cpp  person.h  sheet.cpp  sheet.h
